# vault-gewebe

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Der Gerät version low budget!.odt  LF2A1.1_Berufliche Ausgangssituation_konflikte.docx  bri.canvas  einstein.canvas  einstein.md  gefühle.md  glasfaser.md  halde.md  hauski-feedback.md  inklusion_vs_integration.canvas  julie.canvas  mertaChatverlauf.md  pr27.md  prototyp.md  repos feedback.md  review zyklus.md  streit.md  to do hauski.md  to do semantAH.md  to do weltgewebe.md  to do wgx.md  wgx myc.md  wgx to do.md  wgx zutrag.md  zwischenspeicher.md
.devcontainer/: devcontainer.json  setup.sh
.github/: ci.yml
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  workspace-mobile.json
.smart-env/: smart_env.json
.trash/: behalten.md  bosnische Unwetter.md  genealogieDerMacht.canvas.md  homoDomesticus.md  monolithenaspekte.canvas  monolithenaspekte3.canvas  monolithenstruktur.canvas  test.canvas  vbjvkjv.md  weisheitenmatrix.md
1. weltkrieg/: 1. weltkrieg kapitalverflechtung.canvas
airbrush-kurs/: kursbeschreibung.md
coding/hauski/: .editorconfig  .env.example  .gitignore  .lycheeignore  .pre-commit-config.yaml  .vale.ini  Cargo.toml  README.md  deny.toml  hauski.code-workspace  justfile  mkdocs.yml  pyproject.toml
coding/hauski/.cargo/: config.toml
coding/hauski/.devcontainer/: Dockerfile  devcontainer.json  setup.sh
coding/hauski/.github/: rust.json
coding/hauski/.github/workflows/: ci-tools.yml  ci.yml  codex-review.yml  coverage.yml  heavy.yml  release.yml  security.yml  vendor.yml  wgx-guard.yml  wgx-smoke.yml
coding/hauski/.vale/styles/hauski/GermanComments/: GermanComments.yml
coding/hauski/.vale/styles/hauski/GermanProse/: GermanProse.yml
coding/hauski/.wgx/: profile.local.example.yml  profile.yml
coding/hauski/configs/: flags.yaml  hauski.yml  models.yml
coding/hauski/crates/cli/: Cargo.toml  LICENSE
coding/hauski/crates/cli/src/: main.rs
coding/hauski/crates/core/: Cargo.toml
coding/hauski/crates/core/src/: ask.rs  config.rs  egress.rs  lib.rs  main.rs
coding/hauski/crates/embeddings/: Cargo.toml
coding/hauski/crates/embeddings/src/: lib.rs
coding/hauski/crates/indexd/: Cargo.toml
coding/hauski/crates/indexd/src/: lib.rs
coding/hauski/docs/: index.md
coding/hauski/docs/adr/: ADR-0001__ziele-und-scope.md  README.md
coding/hauski/docs/canvas/codex/: README.md
coding/hauski/docs/process/: README.md  sprache.md
coding/hauski/infra/compose/: compose.core.yml
coding/hauski/observability/k6/: health-smoke.js
coding/hauski/policies/: limits.yaml  perf.json  routing.yaml  slo.yaml
coding/hauski/scripts/: bootstrap.sh  bootstraps.sh  check-vendor.sh  ensure-vendor.sh  git-apply-nolock.sh  hauski-codex.sh
coding/hauski/scripts/codex-prompts/: bugfix.md
coding/hauski/scripts/policies/: codex.policy.yml
coding/hauski/seeds/obsidian.sample/Canvas/: overview.canvas
coding/hauski/seeds/obsidian.sample/notes/: ideas.md  welcome.md
coding/hauski/seeds/semantah/: events.sample.jsonl
coding/hauski/tools/semantah/: Makefile  build_graph.py  build_index.py  update_related.py
denKI/: DenKI .pages  DenKI.GPT.pages  DenKI_Schulprojekt_Handout.docx
docs/: hauski-codex.md
gesundheit/: entgiftung.md
halde/: GEWEBE_MERGE_20250904_145348.md  GEWEBE_MERGE_20250907_082515.md  blaupause hauski-audio.md  don‘t forget.md  hauski-skizzeAlt.md  wgx konzept.md  wgx myc - Seite 2.md
helden/: alexander der große-mindmap.canvas  alexander der große.md  einstein-physik.canvas  einstein.canvas
ki/: foreSelbstauskunft.canvas  foreSelbstdefinition.md  weltverschwoerungsleugnungsbias.md
kram/: random bs.md  systemanalogieStadtteilhaus.md
lgb/: fuhrpark.md
mindmaps/: alexander der große-mindmap.md  frankfurter schule-mindmap.md  pumakäfig-mindmap.md  systemanalogieStadtteilhaus-mindmap.md
nexus/: Nexus.docx
obsidian/: canvas-richtlinien.canvas
reise/: dran denken.md  reiselisten.md  reisematerialliste.md
schule/: praxistagebuch.md
soziales/: geschenke.md
soziologie/: frankfurter schule.md
steuerrückerstattung/: titerbestimmung.HEIC
weisheit/: weisheitskompass.canvas  weisheitsmatrix.canvas
weltverschwörung/: babylon.excalidraw  geheimbundannahme.md  mccloy+.canvas  mccloy.canvas  (+6 more)
(+924 files in other folders)
