[workspace]
members = [
  "crates/core",
  "crates/cli",
  # weitere später: indexd, llm, asr, tts, audio, memory, commentary, bridge, observability, security, adapters/*
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
prometheus-client = "0.22"
walkdir = "2"
dirs = "5"
# sqlx bewusst nicht vorgezogen, bis erste DB-Crate existiert
reqwest = { version = "0.12", features = ["json"] }
url = "2"

[patch.crates-io]
signal-hook-registry = { path = "vendor/signal-hook-registry" }
