[package]
name = "hauski-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
prometheus-client.workspace = true
walkdir.workspace = true
dirs.workspace = true
reqwest.workspace = true
url.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serial_test = "2"
